--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar bg-body-tertiary fixed-top" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">EMPRENDEDURISMO</a>
+          <a class="navbar-brand" href="#">EMPRENDEDORES</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
