--- a/Index.html
+++ b/Index.html
@@ -39,6 +39,172 @@
           </div>
         </div>
       </nav>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4" 
+      style="margin-left: 20px;
+      margin-right: 20px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      padding-top: 100px;">
+        <div class="col">
+          <div class="card h-100 bg-dark border-light">
+            <img src="IMG/Bill_Gates_-_2023_-_P062021-967902_(cropped).jpg" class="card-img-top border-light" alt="Bill Gates">
+            <div class="card-body border-light">
+              <h5 class="card-title text-light">BILL GATES</h5>
+              <p class="card-text text-light">Es un magnate empresarial, desarrollador de software, inversor, autor y filántropo estadounidense. Es cofundador de Microsoft, junto con su difunto amigo de la infancia Paul Allen.</p>
+              <p class="card-text text-light">Empresa: Microsoft</p>
+              <p class="card-text text-light">Servicios: Microsoft desarrolla, fabrica, licencia y produce software y equipos electrónicos, siendo sus productos más usados el sistema operativo Microsoft Windows y la suite Microsoft Office, los cuales tienen una importante posición entre las computadoras personales.</p>
+            </div>
+            <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/steve trabajos.jpg" class="card-img-top border-light" alt="Steve Jobs">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">STEVE JOBS</h5>
+                    <p class="card-text text-light">Steven Paul Jobs fue un empresario, diseñador industrial, magnate empresarial, propietario de medios e inversor estadounidense. Fue cofundador y presidente ejecutivo de Apple​ y máximo accionista individual de The Walt Disney Company.</p>
+                    <p class="card-text text-light">Empresa: Apple</p>
+                    <p class="card-text text-light">Servicios: Apple ha mantenido su enfoque en la simplicidad, la elegancia y la innovación desde sus inicios, lo que ha ayudado a construir una imagen de marca fuerte y creativa. Cabe destacar que las empresas creativas no solo buscan vender productos, sino también inspirar y emocionar a su audiencia.</p>
+                  </div>
+                <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/jeff bezos.jpg" class="card-img-top border-light" alt="Jeff Bezos">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">JEFF BEZOS</h5>
+                    <p class="card-text text-light">Jeffrey Preston Bezos es un empresario, ingeniero y magnate estadounidense, fundador, presidente ejecutivo y exdirector ejecutivo de la empresa de venta en línea Amazon de la cual posee el 7%.​En 2015 fue el quinto hombre más rico del mundo, y en 2017 alcanzó el primer puesto de la lista Forbes.</p>
+                    <p class="card-text text-light">Empresa: Amazon</p>
+                    <p class="card-text text-light">Servicios: ¿Cómo satisface Amazon a sus clientes? Con variedad de productos, procesos simples de registro, compra y pagos, seguridad de datos, envíos gratuitos o de bajo costo, un programa de suscripción y entregas rápidas.</p>
+                  </div>
+                <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4"
+      style="margin-left: 20px;
+      margin-right: 20px;
+      margin-top: 20px;
+      margin-bottom: 20px;">
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/fred smith.jpg" class="card-img-top border-light" alt="Fred Smith">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">FRED SMITH</h5>
+                    <p class="card-text text-light">Es un magnate e inversor estadounidense. Es el fundador y presidente de FedEx Corporation, la empresa de transporte más grande del mundo.</p>
+                    <p class="card-text text-light">Empresa: FedEx</p>
+                    <p class="card-text text-light">Servicios: Es una importante aerolínea de carga estadounidense con sede en Memphis, Tennessee, Estados Unidos. A partir de 2023, es la aerolínea de carga más grande del mundo en términos de tamaño de flota y toneladas de carga voladas.</p>
+                  </div>
+                <div class="card-footer border-light">
+                  <small class="text-body-secondary text-light"></small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/larry page.jpg" class="card-img-top border-light" alt="Larry Page">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">LARRY PAGE</h5>
+                    <p class="card-text text-light">Es un ingeniero en computación y empresario estadounidense de origen judío, creador junto con Serguéi Brin de Google. Clasificado como la 10.ª persona más rica del mundo.</p>
+                    <p class="card-text text-light">Empresa: Google</p>
+                    <p class="card-text text-light">Servicios: Nació como un proyecto universitario que se basó en organizar y distribuir una gran cantidad de información en la web, es decir, un motor de búsqueda por Internet.</p>
+                  </div>
+                <div class="card-footer border-light">
+                  <small class="text-body-secondary text-light"></small>
+            </div>
+          </div>
+        </div>
+        <div class="card h-100 bg-dark border-light">
+            <img src="IMG/howard schultz.jpg" class="card-img-top border-light" alt="Howard Schultz">
+            <div class="card-body border-light">
+                <h5 class="card-title text-light">HOWARD SCHULTZ</h5>
+                <p class="card-text text-light">Howard Schultz es un empresario y político estadounidense. Es conocido por su puesto como CEO en la empresa Starbucks desde 1986 hasta 2000 y nuevamente desde 2008 hasta 2017. Es un expropietario de los Seattle SuperSonics, y fue miembro de la Junta Directiva de Square, Inc</p>
+                <p class="card-text text-light">Empresa: Starbucks</p>
+                <p class="card-text text-light">Servicios: Te ofrece todo lo que acompaña a una experiencia de café completa y gratificante. Ofrecemos una selección de tés premium, pasteles finos y otras delicias para complacer tu paladar. Asimismo, la música que escuchas en la tienda se elige por su arte y atractivo.</p>
+              </div>
+            <div class="card-footer border-light">
+              <small class="text-body-secondary text-light"></small>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4"
+      style="margin-left: 20px;
+      margin-right: 20px;
+      margin-top: 20px;
+      margin-bottom: 20px;">
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/mark zuckerberg.jpg" class="card-img-top border-light" alt="Mark Zuckerberg">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">MARK ZUCKERBERG</h5>
+                    <p class="card-text text-light">Mark Elliot Zuckerberg es un programador y empresario estadounidense, uno de los creadores y fundadores de Facebook y la red social homónima, y su actual presidente.</p>
+                    <p class="card-text text-light">Empresa: Facebook</p>
+                    <p class="card-text text-light">Servicios: En él puedes encontrar personas conocidas, participar en grupos de interés, compartir contenido, enviar y recibir mensajes, hacer contactos, realizar búsquedas, anunciar, etc.</p>
+                  </div>
+                <div class="card-footer border-light">
+                  <small class="text-body-secondary text-light"></small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/john mackey.jpg" class="card-img-top border-light" alt="John Mackey">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">JOHN MACKEY</h5>
+                    <p class="card-text text-light">John Mackey es un empresario estadounidense famoso por haber iniciado la cadena de supermercados Whole Foods Market y es uno de los personajes tejanos más importantes en el mundo de los negocios.</p>
+                    <p class="card-text text-light">Empresa: Whole Foods Market</p>
+                    <p class="card-text text-light">Servicios: Whole Foods Market es una cadena de supermercados de alimentos naturales con más de 460 tiendas en Estados Unidos, Canadá y el Reino Unido.</p>
+                  </div>
+                <div class="card-footer border-light">
+                  <small class="text-body-secondary text-light"></small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/sam walton.jpg" class="card-img-top border-light" alt="Sam Walton">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">SAM WALTON</h5>
+                    <p class="card-text text-light">Samuel Moore Walton fue un empresario y militar estadounidense, conocido por haber fundado la mayor cadena de tiendas minoristas del mundo Walmart. Wal-Mart Stores Inc. creció hasta convertirse en la corporación más grande del mundo por ingresos, así como en el empleador privado más grande del mundo.</p>
+                    <p class="card-text text-light">Empresa: Wal-Mart</p>
+                    <p class="card-text text-light">Servicios: Walmart ya es más que solo un supermercado: estos son sus otros negocios. El retailer ha diversificado su oferta a telefonía celular, publicidad y pago de servicios digitales, lo que ademas de fidelizar a sus clientes le permite diversificar su modelo de negocio.</p>
+                  </div>
+                <div class="card-footer border-light">
+                  <small class="text-body-secondary text-light"></small>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4"
+      style="margin-left: 20px;
+      margin-right: 20px;
+      margin-top: 20px;
+      margin-bottom: 20px;">
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/Narayana.jpg" class="card-img-top border-light" alt="Narayana Murthy">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">NARAYANA MURTHY</h5>
+                    <p class="card-text text-light">El empresario indio creador de la empresa de IT más grande de su país comenzó con los ahorros que le prestó su esposa. Ahora, da cuenta de cómo es posible lograr redito económico y un sistema de valores sólido a la vez.</p>
+                    <p class="card-text text-light">Empresa: INFOSYS</p>
+                    <p class="card-text text-light">Servicios: Infosys es un líder mundial en servicios digitales y consultoría de siguiente generación. Permitimos a los clientes en más de 50 países navegar su transformación digital.</p>
+                  </div>
+                <div class="card-footer border-light">
+                  <small class="text-body-secondary text-light"></small>
+            </div>
+          </div>
+        </div>
+       </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
