--- a/EMPRESASSV.html
+++ b/EMPRESASSV.html
@@ -39,6 +39,79 @@
           </div>
         </div>
       </nav>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4" 
+      style="margin-left: 20px;
+      margin-right: 20px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      padding-top: 100px;">
+        <div class="col">
+          <div class="card h-100 bg-dark border-light">
+            <img src="IMG/12lab.png" class="card-img-top border-light" alt="Bill Gates">
+            <div class="card-body border-light">
+              <h5 class="card-title text-light">12LAB</h5>
+              <p class="card-text text-light">Ayudamos a CEOS, CMOs y CTOs a potenciar el poder digital de sus empresas, haciendo frente a los retos digitales de las industrias, repensando cómo la tecnología transformará la experiencia de sus clientes y el modelo de su negocio.</p>
+            </div>
+            <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/ablerex.png" class="card-img-top border-light" alt="Steve Jobs">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">ABLEREX</h5>
+                    <p class="card-text text-light">Ablerex, con sus propias tecnologías, ha desarrollado productos de conversión de energía que promueven la mejora de la estabilidad, la calidad y eficiencia de la energía en el mercado mundial.</p>
+                  </div>
+                <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/ADETEC.png" class="card-img-top border-light" alt="Jeff Bezos">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">ADETEC SAS</h5>
+                    <p class="card-text text-light">Compañía fundada en 2009 desarrolladora de soluciones B2B y B2C sobre tecnologías móviles, web y Chatbot comercializadas bajo el modelo de suscripción. Nuestro propósito es incrementar la rentabilidad de compañías con personal trabajando en campo o de manera remota, mejorando su productividad y la eficiencia de sus procesos de negocio.
+                        Nuestra obsesión por el servicio nos ha permitido conquistar en 15 años a cerca de 7.000 usuarios de más de 257 compañías en Colombia y Latinoamérica, de diversos sectores de la economía, entre los que se cuenta consumo masivo, financiero, farmacéutico, servicios, entre otros.</p>
+                  </div>
+                <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4" 
+      style="margin-left: 20px;
+      margin-right: 20px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      padding-top: 100px;">
+        <div class="col">
+          <div class="card h-100 bg-dark border-light">
+            <img src="IMG/AITE.png" class="card-img-top border-light" alt="Bill Gates">
+            <div class="card-body border-light">
+              <h5 class="card-title text-light">AITE SOLUTIONS</h5>
+              <p class="card-text text-light">Somos una empresa desarrolladora de aplicativos especializados que ayudan a administrar de forma integral los procesos de las compañías mediante el uso de tecnología avanzada de la industria 4RI. Esa es la razón por la que desde el 2010 hemos sido líderes en el diseño e implementación de Soluciones de Software para los sectores: Oil & Gas, Minero, Marítimo y Portuario, Energético, Industrial, Gobierno, Autoridades Ambientales, Farmacéutico, Alimentos, Construcción y Obras Civiles.</p>
+            </div>
+            <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/ALLTIC.png" class="card-img-top border-light" alt="Steve Jobs">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">ALLTIC SAS</h5>
+                    <p class="card-text text-light">Empresa Colombiana con más de 16 años en el mercado, con oficinas en Cali, Colombia y Guatemala dedicada a la Ingeniería de Software, brindando soporte desde la adquisición, administración y despliegue de tecnologías de la información, hasta el Levantamiento de Requerimientos, Pruebas automatizadas y Mesa de ayuda TI con conceptos DevOps (CT+CI+CD).</p>
+                  </div>
+                <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+      </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
