--- a/EMPRESASINTER.html
+++ b/EMPRESASINTER.html
@@ -39,6 +39,78 @@
           </div>
         </div>
       </nav>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4" 
+      style="margin-left: 20px;
+      margin-right: 20px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      padding-top: 100px;">
+        <div class="col">
+          <div class="card h-100 bg-dark border-light">
+            <img src="IMG/samsung.jpg" class="card-img-top border-light" alt="Bill Gates">
+            <div class="card-body border-light">
+              <h5 class="card-title text-light">SAMSUNG</h5>
+              <p class="card-text text-light">Samsung Electronics es una multinacional electrónica y de tecnologías de punta de la información con sede en Samsung Town, Seúl, Corea del Sur.​ Es la principal subsidiaria del Grupo Samsung. Con plantas de ensamble y redes de venta en 65 países, Samsung Electronics cuenta con más de 200.000 empleados.​</p>
+            </div>
+            <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/Tesla.jpg" class="card-img-top border-light" alt="Steve Jobs">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">TESLA</h5>
+                    <p class="card-text text-light">Tesla, Inc. es una empresa estadounidense con sede en Austin, Texas, liderada por Elon Musk, la cual diseña, fabrica y vende automóviles eléctricos, componentes para la propulsión de vehículos eléctricos, techos solares, instalaciones solares fotovoltaicas y baterías domésticas.</p>
+                  </div>
+                <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/meta.png" class="card-img-top border-light" alt="Jeff Bezos">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">META</h5>
+                    <p class="card-text text-light">Meta Platforms, Inc.​​​, cuyo nombre comercial es Meta, es un conglomerado estadounidense de tecnología y redes sociales con sede en Menlo Park, California.</p>
+                  </div>
+                <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4" 
+      style="margin-left: 20px;
+      margin-right: 20px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      padding-top: 100px;">
+        <div class="col">
+          <div class="card h-100 bg-dark border-light">
+            <img src="IMG/nvidia.jpg" class="card-img-top border-light" alt="Bill Gates">
+            <div class="card-body border-light">
+              <h5 class="card-title text-light">NVIDIA</h5>
+              <p class="card-text text-light">Nvidia Corporation es una empresa de software y fabless que diseña unidades de procesamiento de gráficos, interfaz de programación de aplicaciones para ciencia de datos y computación de alto rendimiento, así como unidades de sistema en chip para la computación móvil y el mercado automotriz.</p>
+            </div>
+            <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card h-100 bg-dark border-light">
+                <img src="IMG/opera.jpg" class="card-img-top border-light" alt="Steve Jobs">
+                <div class="card-body border-light">
+                    <h5 class="card-title text-light">OPERA</h5>
+                    <p class="card-text text-light">Opera es un navegador web y suite de Internet creado por la empresa noruega Opera Software, capaz de realizar múltiples tareas como navegar por sitios web, gestionar correo electrónico, contactos, fuentes web, charlar vía irc y/o ser un cliente bittorrent.</p>
+                  </div>
+                <div class="card-footer border-light">
+            </div>
+          </div>
+        </div>
+      </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
